[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/variations/0/Var0_0.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/img/labyrinth/Mancha 3.png" type="Texture" id=5]
[ext_resource path="res://scenes/variations/0/MainBlock.gd" type="Script" id=6]
[ext_resource path="res://assets/img/labyrinth/Mancha 2.png" type="Texture" id=7]
[ext_resource path="res://assets/img/labyrinth/Mancha 1.png" type="Texture" id=8]
[ext_resource path="res://assets/img/botones/boton_iniciar.png" type="Texture" id=9]
[ext_resource path="res://assets/img/Rectangle 1.png" type="Texture" id=10]
[ext_resource path="res://assets/img/Rectangle 2.png" type="Texture" id=11]
[ext_resource path="res://assets/img/labyrinth/Recorrido.png" type="Texture" id=12]
[ext_resource path="res://assets/font/Montserrat-Medium.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://assets/img/labyrinth/Robot.png" type="Texture" id=14]
[ext_resource path="res://assets/img/labyrinth/Baldosa 4.png" type="Texture" id=15]
[ext_resource path="res://scenes/variations/0/PathFollow2D.gd" type="Script" id=16]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 28.3586
height = 321.712

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.407843 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=4]
size = 21
font_data = ExtResource( 13 )

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 313.609, 6.61432, 0, 0, 0, 0, 39.4765, 6.61432, 0, 0, 0, 0, 17.6131, 30.1594, 0, 0, 0, 0, 10.886, 60.4317, 0, 0, 0, 0, 24.3403, 97.4312, 0, 0, 0, 0, 63.0216, 105.84, 0, 0, 0, 0, 147.111, 104.158, 0, 0, 0, 0, 279.973, 105.84, 0, 0, 0, 0, 305.2, 131.067, 0, 0, 0, 0, 311.927, 166.385, 0, 0, 0, 0, 286.7, 196.657, 0, 0, 0, 0, 217.747, 205.066, 0, 0, 0, 0, 158.884, 205.066, 0, 0, 0, 0, 68.0669, 205.066, 0, 0, 0, 0, 20.9767, 233.656, 0, 0, 0, 0, 15.9314, 267.292, 0, 0, 0, 0, 32.7493, 304.292, 0, 0, 0, 0, 69.7487, 311.019, 0, 0, 0, 0, 158.884, 311.019, 0, 0, 0, 0, 306.882, 309.337 )
}

[node name="Scene" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 3 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "TÃ­tulo del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
margin_left = 1014.0
margin_top = 794.0
margin_right = 1388.0
margin_bottom = 841.0
theme = ExtResource( 2 )
text = "SIGUIENTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rectangle 1" type="Sprite" parent="."]
position = Vector2( 972.561, 432 )
texture = ExtResource( 10 )

[node name="Rectangle 2" type="Sprite" parent="Rectangle 1"]
position = Vector2( 241.127, 0 )
texture = ExtResource( 11 )

[node name="MainBlock" type="Control" parent="."]
margin_left = 558.0
margin_top = 222.0
margin_right = 914.0
margin_bottom = 288.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectArea" type="Area2D" parent="MainBlock"]
position = Vector2( -558, -232 )
z_as_relative = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShadow" type="CollisionShape2D" parent="MainBlock/ConnectArea"]
position = Vector2( 737, 306 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Shadow" type="Panel" parent="MainBlock/ConnectArea"]
margin_left = 552.0
margin_top = 278.0
margin_right = 925.0
margin_bottom = 332.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainBlock" type="Sprite" parent="MainBlock"]
position = Vector2( 165, 22 )
z_index = 2
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="MainBlock/MainBlock"]
margin_left = -157.0
margin_top = -6.76221
margin_right = 175.0
margin_bottom = 20.2378
custom_fonts/font = SubResource( 4 )
text = "Iniciar con barra espaciadora"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tiles" type="Control" parent="."]
margin_left = 100.006
margin_top = 287.32
margin_right = 140.006
margin_bottom = 327.32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Tiles"]
margin_left = 9.55273
margin_top = 9.5528
margin_right = 309.553
margin_bottom = 309.553
custom_constants/vseparation = 100
custom_constants/hseparation = 100
columns = 4
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Tiles/GridContainer"]

[node name="Baldosa 4" type="Sprite" parent="Tiles/GridContainer/Control"]
texture = ExtResource( 15 )

[node name="Control2" type="Control" parent="Tiles/GridContainer"]
margin_left = 100.0
margin_right = 100.0

[node name="Baldosa 4" type="Sprite" parent="Tiles/GridContainer/Control2"]
texture = ExtResource( 15 )

[node name="Control3" type="Control" parent="Tiles/GridContainer"]
margin_left = 200.0
margin_right = 200.0

[node name="Baldosa 4" type="Sprite" parent="Tiles/GridContainer/Control3"]
texture = ExtResource( 15 )

[node name="Control4" type="Control" parent="Tiles/GridContainer"]
margin_left = 300.0
margin_right = 300.0

[node name="Baldosa 4" type="Sprite" parent="Tiles/GridContainer/Control4"]
texture = ExtResource( 15 )

[node name="Control5" type="Control" parent="Tiles/GridContainer"]
margin_top = 100.0
margin_bottom = 100.0

[node name="Baldosa 4" type="Sprite" parent="Tiles/GridContainer/Control5"]
texture = ExtResource( 15 )

[node name="Control6" type="Control" parent="Tiles/GridContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 100.0
margin_bottom = 100.0

[node name="Baldosa 4" type="Sprite" parent="Tiles/GridContainer/Control6"]
texture = ExtResource( 15 )

[node name="Control7" type="Control" parent="Tiles/GridContainer"]
margin_left = 200.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 100.0

[node name="Baldosa 4" type="Sprite" parent="Tiles/GridContainer/Control7"]
texture = ExtResource( 15 )

[node name="Control8" type="Control" parent="Tiles/GridContainer"]
margin_left = 300.0
margin_top = 100.0
margin_right = 300.0
margin_bottom = 100.0

[node name="Baldosa 4" type="Sprite" parent="Tiles/GridContainer/Control8"]
texture = ExtResource( 15 )

[node name="Control9" type="Control" parent="Tiles/GridContainer"]
margin_top = 200.0
margin_bottom = 200.0

[node name="Baldosa 4" type="Sprite" parent="Tiles/GridContainer/Control9"]
texture = ExtResource( 15 )

[node name="Control10" type="Control" parent="Tiles/GridContainer"]
margin_left = 100.0
margin_top = 200.0
margin_right = 100.0
margin_bottom = 200.0

[node name="Baldosa 4" type="Sprite" parent="Tiles/GridContainer/Control10"]
texture = ExtResource( 15 )

[node name="Control11" type="Control" parent="Tiles/GridContainer"]
margin_left = 200.0
margin_top = 200.0
margin_right = 200.0
margin_bottom = 200.0

[node name="Baldosa 4" type="Sprite" parent="Tiles/GridContainer/Control11"]
texture = ExtResource( 15 )

[node name="Control12" type="Control" parent="Tiles/GridContainer"]
margin_left = 300.0
margin_top = 200.0
margin_right = 300.0
margin_bottom = 200.0

[node name="Baldosa 4" type="Sprite" parent="Tiles/GridContainer/Control12"]
texture = ExtResource( 15 )

[node name="Control13" type="Control" parent="Tiles/GridContainer"]
margin_top = 300.0
margin_bottom = 300.0

[node name="Baldosa 4" type="Sprite" parent="Tiles/GridContainer/Control13"]
texture = ExtResource( 15 )

[node name="Control14" type="Control" parent="Tiles/GridContainer"]
margin_left = 100.0
margin_top = 300.0
margin_right = 100.0
margin_bottom = 300.0

[node name="Baldosa 4" type="Sprite" parent="Tiles/GridContainer/Control14"]
texture = ExtResource( 15 )

[node name="Control15" type="Control" parent="Tiles/GridContainer"]
margin_left = 200.0
margin_top = 300.0
margin_right = 200.0
margin_bottom = 300.0

[node name="Baldosa 4" type="Sprite" parent="Tiles/GridContainer/Control15"]
texture = ExtResource( 15 )

[node name="Control16" type="Control" parent="Tiles/GridContainer"]
margin_left = 300.0
margin_top = 300.0
margin_right = 300.0
margin_bottom = 300.0

[node name="Baldosa 4" type="Sprite" parent="Tiles/GridContainer/Control16"]
texture = ExtResource( 15 )

[node name="Recorrido" type="Sprite" parent="Tiles"]
position = Vector2( 162.273, 165.372 )
texture = ExtResource( 12 )

[node name="Path2D" type="Path2D" parent="Tiles"]
curve = SubResource( 5 )

[node name="PathFollow2D" type="PathFollow2D" parent="Tiles/Path2D"]
position = Vector2( 313.609, 6.61432 )
rotation = 3.14159
loop = false
script = ExtResource( 16 )

[node name="Robot" type="Area2D" parent="Tiles/Path2D/PathFollow2D"]
z_index = 2

[node name="Robot" type="Sprite" parent="Tiles/Path2D/PathFollow2D/Robot"]
position = Vector2( 3.65894, -4.26953 )
rotation = 3.14159
texture = ExtResource( 14 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Tiles/Path2D/PathFollow2D/Robot"]
position = Vector2( 3.65894, -4.26953 )
rotation = 3.14159
polygon = PoolVector2Array( 16.5, -35.6, 16.5, -32.6, 36.5, -13.6, 36.5, -9.9, 40.5, 11.5, 35.5, 11.5, 7.6, 39.5, -7.4, 39.5, -36.5, 13.8, -36.5, -16.5, -32.3, -16.5, -9.5, -35.8, -9.5, -40.5 )

[node name="Mancha1" type="Area2D" parent="Tiles"]

[node name="Mancha" type="Sprite" parent="Tiles/Mancha1"]
position = Vector2( 17.868, 45.8067 )
texture = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Tiles/Mancha1"]
position = Vector2( 17.868, 45.8067 )
polygon = PoolVector2Array( 41, -11.3, 41, 13.3, 39.8, 14.5, -40.8, 14.5, -41, -4.5, -34.8, -10.5, -23, -10.5, -23, -8.6, -9.4, 0.5, -6.9, 0.5, -2, 1.2, 5, -1, 20, -14.4, 38, -14.5 )

[node name="Mancha2" type="Area2D" parent="Tiles"]

[node name="Mancha" type="Sprite" parent="Tiles/Mancha2"]
position = Vector2( 114.699, 207.722 )
texture = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Tiles/Mancha2"]
position = Vector2( 114.699, 207.722 )
polygon = PoolVector2Array( 12.1, -13.5, 15.5, -13.5, 19, -11.7, 19, -10.6, 20, -9.9, 20, 7.5, 19.2, 7.5, 15, 8, 17, 9.5, 17, 16.3, 14.8, 18.5, -2.1, 18.5, -3, 15.2, -5.2, 18.5, -15, 18.5, -15, 17.2, -20, 11.4, -20, 3.3, -19.5, 2.5, -20, 0.5, -20, -14.5, -17, -18.5, -9.2, -18.5, -8.4, -18.5, 9, -18.5 )

[node name="Mancha3" type="Area2D" parent="Tiles"]

[node name="Mancha" type="Sprite" parent="Tiles/Mancha3"]
position = Vector2( 14.6932, 229.945 )
texture = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Tiles/Mancha3"]
position = Vector2( 14.6932, 229.945 )
polygon = PoolVector2Array( 6.5, -22.9, 6.5, -19.5, 7.8, -10.5, 5.3, -10.5, -1.2, -4, 13.5, -8.1, 13.5, -5.6, 19.5, -1.6, 19.5, 1.5, 22.1, 11.5, 19.6, 11.5, 13.6, 20.5, 9.7, 20.5, -0.5, 21.8, -0.5, 20, -11.5, 17, -11.5, 15.5, -20.5, 8.5, -20.5, 6.1, -24.5, 0.1, -24.5, -9.5, -22.4, -9.5, -6.5, -24.4, -6.5, -25.5, -1.2, -25.5 )
[connection signal="done" from="Tiles/Path2D/PathFollow2D" to="." method="_done"]
[connection signal="area_entered" from="Tiles/Path2D/PathFollow2D/Robot" to="." method="_area_entered"]
